--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                     <label for="ciphertext">Ciphertext</label>
                     <textarea id="ciphertext" rows="3" placeholder="Paste K4 ciphertext here..."></textarea>
                 </div>
-
+                
+<div class="key-length">Key length: <span></span></div>
+                
                 <div class="form-group">
                     <label for="knownText">Known plaintext</label>
                     <input type="text" id="knownText" placeholder="BERLIN">
